# biocompute

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: AGENT_RUNBOOK.md  AI_USAGE.md
docs/assets/: example-report.css  example-verification-report.html
examples/: agent-endometriosis.sh  batch-scar-endo-alz.json  batch-scar-indications.json
src/biocompute/: __init__.py  batch.py  cli.py  engine.py  models.py
src/biocompute/archive/: batch_analysis.py  compare.py  export.py  report.py  store.py
src/biocompute/calibration/: ground_truth.py  live.py  tune.py
src/biocompute/data/: cache.py  clinical_trials.py  gene_names.py  gtex.py  gwas.py  hpa.py  llm.py  llm_backends.py  opentargets.py  pubmed.py  pubmed_abstracts.py  semantic_scholar.py  string_db.py
src/biocompute/fitness/: clinical.py  druggability.py  evaluator.py  expression.py  gwas.py  ip.py  literature.py  llm_clinical.py  pathway.py  prior_knowledge.py  safety.py  (+1 more)
tests/: conftest.py  test_batch.py  test_batch_analysis.py  test_bio_clients.py  test_cache.py  test_calibration.py  test_calibration_live.py  test_cli.py  test_clinical.py  test_data_clients.py  test_db_seed.py  test_engine.py  test_export.py  test_fitness.py  test_gwas.py  test_integration.py  test_llm.py  test_llm_clinical.py  test_models.py  test_models_prior_knowledge.py  test_models_strategy.py  test_mutate_critique.py  test_negative_evidence.py  test_prior_knowledge_llm.py  test_pubmed_retry.py  test_report.py  test_search.py  test_store.py  test_strategy_prior_art.py  test_verification.py
(+7 files in other folders)
