[project]
name = "biocompute"
version = "0.1.0"
description = "Disease-agnostic therapeutic target discovery engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "click>=8.1",
]

[project.scripts]
biocompute = "biocompute.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
